crates/bevy_ecs_compile_fail_tests/tests/ui/system_query_many_for_each_mut_lifetime_safety.stderr
error[E0521]: borrowed data escapes outside of closure
  --> tests/ui/system_query_many_for_each_mut_lifetime_safety.rs:10:9
   |
7  |     let mut results = Vec::new();
   |         ----------- `results` declared here, outside of the closure body
8  |     query.many_for_each_mut(vec![*e, *e], |a| {
   |                                            - `a` is a reference that is only valid in the closure body
9  |         // this should fail to compile
10 |         results.push(a);
   |         ^^^^^^^^^^^^^^^ `a` escapes the closure body here
