crates/bevy_ecs_compile_fail_tests/tests/ui/system_query_many_for_each_mut_lifetime_safety.rs
use bevy_ecs::prelude::*;

#[derive(Component)]
struct A(usize);

fn system(mut query: Query<&mut A>, e: Res<Entity>) {
    let mut results = Vec::new();
    query.many_for_each_mut(vec![*e, *e], |a| {
        // this should fail to compile
        results.push(a);
    });
}

fn main() {}
